[UPD] create-first-block-main

--- a/index.html
+++ b/index.html
@@ -32,9 +32,30 @@
                 </div>
             </div>
         </div>
-
-
     </header>
+    <div class="main-container">
+        <div class="container">
+            <div class="row g-10 m-20 sp-between">
+                <div class="col-2">
+                    <div class="content debug"></div>
+                </div>
+                <div class="col-1">
+                    <div class="content debug"></div>
+                </div>
+            </div>
+            <div class="row g-10 m-20 sp-between">
+                <div class="col-33 w-33">
+                    <div class="content debug"></div>
+                </div>
+                <div class="col-33 w-33">
+                    <div class="content debug"></div>
+                </div>
+                <div class="col-33 w-33">
+                    <div class="content debug"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
