[UPD] create-block-violet-with-img

--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
             </div>
         </div>
     </div>
+    <div class="main-container-2">
+        <div class="row">
+            <div class="col-50 f-end">
+                <img class="img" src="./img/planning1.png">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-50 flex-center fd-column">
+                <h2>Strategic planning</h2>
+                <p class="w-50 margin-top-20">Egestas dui id ornare arcu odio varius. Diam donec adipiscing tristique risus nec feugiat in fermentum. Cursus metus aliquam eleifend mi in nulla posuere</p>
+            </div>
+    </div>
 
 
 
