[UPD] finish-block-with-container-vaiolet

--- a/index.html
+++ b/index.html
@@ -80,12 +80,44 @@
         <main>
             <div class="main-container">
                 <div class="container">
-                     <div class="row g-10 m-20">
+                    <div class="row g-10 m-20">
                         <div class="col-100">
                             <p class="margin-top-70 flex-center">Testimonials</p>
                             <h2 class="text-vaiolet flex-center m-20">We are commicted expert partners</h2>
                             <p class="flex-center text-12">We place uge value on strong relationship and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right</p>
-                            <div class="debug-3 margin-top-50 flex-center"></div>
+                            <div class="debug-3 margin-top-50 flex-center">
+                                <div class="col-20">
+                                    <img class="img-2 m-20" src="./img/testimonial1.jpg"> 
+                                </div>
+                                <div class="col-80">
+                                    <p class="text-white flex-center m-20">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris"</p>
+                                    <p class="text-white flex center m-20">NAT REYNOLDS</p>
+                                </div>
+                            </div>
+                        </div>
+                           
+                        </div>
+                        <div class="col-100">
+                            <div class="debug-3 margin-top-50 flex-center">
+                                <div class="col-20">
+                                    <img class="img-2 m-20" src="./img/testimonial2.jpg"> 
+                                </div>
+                                <div class="col-80">
+                                    <p class="text-white flex-center m-20">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris"</p>
+                                    <p class="text-white flex center m-20">CELIA ALMEDA</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-100">
+                            <div class="debug-3 margin-top-50 flex-center">
+                                <div class="col-20">
+                                    <img class="img-2 m-20" src="./img/testimonial3.jpg"> 
+                                </div>
+                                <div class="col-80">
+                                    <p class="text-white flex-center m-20">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris"</p>
+                                    <p class="text-white flex center m-20">BOB ROBERTS</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
