--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                     <div class="row">
                         <div class="col-80">
                             <h2 class="text-vaiolet margin-left-125">About Us</h2>
-                            <p class="w-50 margin-left-125 margin-top-70">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                            <p class="margin-top-10 w-50 margin-left-125 margin-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                            <p class="w-50 margin-left-125 margin-top-70 line-height">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                            <p class="margin-top-10 w-50 margin-left-125 margin-top-20 line-height">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                         </div>
                         <div class="col-20">
                             <img class="img-2" src="./img/about.jpg">
@@ -179,10 +179,18 @@
                         <h2 class="text-white m-left-340">Simple, Transparent Pricing</h2>
                     </div>
                     <div class="row pa-20">
-                        <p class="text-yellow m-left-390">It's Free!</p>
+                        <p class="text-yellow m-left-390 bold">It's Free!</p>
                     </div>
                     <div class="row">
-                        <p class="text-white m-left w-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation</p>
+                        <p class="text-white m-left w-50 line-height">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation</p>
+                    </div>
+                    <div class="row">
+                        <div class="margin-bottom margin-top-30">
+                            <a class="button-white bold flex-center m-left-435">Get Started</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <p class="text-white text-12 m-left-375 mb">Copyright 2021 Boolean Classe XX<a class="link link-2 a-class" href="#"> Privacy Policy</a></p>
                     </div>
 
                     
